<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVarL" Id="{69b6a7b5-2bc0-4b7a-b05f-2daeace11012}">
    <Declaration><![CDATA[VAR_GLOBAL
	///ADAS 
	iSignalID: ARRAY[0..20] OF BYTE;
	iAchseID: ARRAY[0..20] OF BYTE;
	iComCylce: BYTE := 20;
	iMode: INT := 10;
	iTracks: UINT;
	///Position x
	X_Machine_CS AT %Q*: LREAL;
	///Position y
	Y_Machine_CS AT %Q*: LREAL;
	///Position z
	Z_Machine_CS AT %Q*: LREAL;
	///Position c
	C_Machine_CS AT %Q*: LREAL;
	///Position b
	B_Machine_CS AT %Q*: LREAL;
	///Soll-Position x
	X_Machine_CS_soll AT %Q*: LREAL;
	///Geschwindigkeit x
	X_V_Machine_CS AT %Q*: LREAL;
	///Geschwindigkeit y
	Y_V_Machine_CS AT %Q*: LREAL;
	///Geschwindigkeit z
	Z_V_Machine_CS AT %Q*: LREAL;
	///Geschwindigkeit c
	C_V_Machine_CS AT %Q*: LREAL;
	///Geschwindigkeit b
	B_V_Machine_CS AT %Q*: LREAL;
	///Drehzahl n
	n_Spindle AT %Q*: LREAL;
	///Beschleunigung x
	X_a_Machine_CS AT %Q*: LREAL;
	///Beschleunigung y
	Y_a_Machine_CS AT %Q*: LREAL;
	///Beschleunigung z
	Z_a_Machine_CS AT %Q*: LREAL;
	///Beschleunigung c
	C_a_Machine_CS AT %Q*: LREAL;
	///Beschleunigung b
	B_a_Machine_CS AT %Q*: LREAL;
	///Strom x
	X_I AT %Q*: LREAL;
	///Strom y
	Y_I AT %Q*: LREAL;
	///Strom z
	Z_I AT %Q*: LREAL;
	///Strom c
	C_I AT %Q*: LREAL;
	///Strom b
	B_I AT %Q*: LREAL;
	///Strom Spindel
	n_I AT %Q*: LREAL;
	Data: uCCDatagram;
	///CCDataStreamSetupOUT 	 		:sCCDataStreamSetup;
	CCDataStreamSetupOUT AT %Q*: sCCDataStreamSetup;
	bGO: BOOL;

END_VAR

VAR_GLOBAL CONSTANT
	///ADAS
	gVar_NumberOfAdasTracks: INT := 30;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>