<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="MAIN" Id="{98aa778c-fd39-4f90-bd84-13e8f9fbe3e4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR_INPUT
//ADAS
	ADAS_in		AT %I* 	: ARRAY[0..63] OF WORD; //ADAS_Rohdaten
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF FORCE_RESET=1 THEN
	RESULT[0]:=0;
	PTS_MEASUREMENT_HISTOGRAM_2[2]:=0;
	RESULT[1]:=0;
END_IF

IF VarTest = TRUE THEN
	VarTest := FALSE;
END_IF

IF VarTest = FALSE THEN
	VarTest := TRUE;
END_IF

ANALOG_INPUT_EL3104();
//ANALOG_OUTPUT_EL4134();
DP_CONFIG_IN_EL6731();
SENSOR_CONTROL_EL6751();
SENSOR_SIGNALS_EL6751();
FORCE_SIGNALS();
//Test();
DATAMODULE();

MEAS_STIFFNESS_COLLISION();
MEAS_STIFFNESS_PROCESS();
DEFLECTION_CONTROL_FEED();
DEFLECTION_CONTROL_POSITION();
TOUCH_PROBE_LINE();
DP_CONFIG_OUT_EL6731();


//ADAS Daten
	//x-Achse (soll alles stimmen)
X_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[1])	/ 10000; //Umrechnung in: mm -> /10000 (10000 inkremente sind 1mm)
X_Machine_CS_soll 	:= DINT_TO_LREAL(ADAS_Kom.adasData[27])	/ 10000; //Umrechnung in: mm -> /10000 (10000 inkremente sind 1mm)
X_V_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[6])	/ 10000; //Umrechnung in: mm/s-> /10000
X_a_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[12])	/ 10000; //Umrechnung in: mm/s²-> /10000
X_I					:= DINT_TO_LREAL(ADAS_Kom.adasData[18])	/ 1000;  //Umrechnung in: A -> /1000

	//y-Achse  (soll alles stimmen)
Y_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[2]) 	/ 10000; //Umrechnung in: mm -> /10000
Y_V_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[7]) 	/ 10000; //Umrechnung in: mm/s-> /10000
Y_a_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[13])	/ 10000; //Umrechnung in: mm/s²-> /10000
Y_I					:= DINT_TO_LREAL(ADAS_Kom.adasData[19])	/ 1000;  //Umrechnung in: A -> /1000
	//z-Achse (soll alles stimmen)
Z_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[3]) 	/ 10000; //Umrechnung in: mm -> /10000
Z_V_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[8]) 	/ 10000; //Umrechnung in: mm/s-> /10000
Z_a_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[14])	/ 10000; //Umrechnung in: mm/s²-> /10000
Z_I					:= DINT_TO_LREAL(ADAS_Kom.adasData[20])	/ 1000;  //Umrechnung in: A -> /1000
	//C-Achse (soll alles stimmen)
C_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[4] 	MOD 3600000)/ 10000 ; //Umrechnung in: mm -> /10000
C_V_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[9]) 	/ 10000; //Umrechnung in: mm/s-> /10000
C_a_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[15])	/ 10000; //Umrechnung in: mm/s²-> /10000
C_I 				:= DINT_TO_LREAL(ADAS_Kom.adasData[21])	/ 1000;  //Umrechnung in: A -> /1000
	//B-Achse (B_Machine_CS wid von Spinel beschrieben)
B_Machine_CS		:= DINT_TO_LREAL(ADAS_Kom.adasData[24]) / 10000; //Umrechnung in: mm -> /10000 //b
B_V_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[10]) / 10000; //Umrechnung in: mm/s-> /10000
B_a_Machine_CS 		:= DINT_TO_LREAL(ADAS_Kom.adasData[16]) / 10000; //Umrechnung in: mm/s²-> /10000
B_I 				:= DINT_TO_LREAL(ADAS_Kom.adasData[22]) / 1000;  //Umrechnung in: A -> /1000
	//Spindel
n_Spindle 			:= (DINT_TO_LREAL(ADAS_Kom.adasData[5])/360)*60/10000 ; //kommt in milli°/s Umrechnung in: 1/min-> *0,166667
n_I 				:= DINT_TO_LREAL(ADAS_Kom.adasData[23])/1000; //Umrechnung in: A -> /1000



]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="3" Count="5" />
      <LineId Id="36" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="11" Count="8" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="20" Count="7" />
      <LineId Id="46" Count="29" />
      <LineId Id="28" Count="3" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>